# test-invest

./: .env.example  .gitignore  CLAUDE.md  exec.md  pyproject.toml
src/auto_invest/: __main__.py  config.py
src/auto_invest/api/: kis_auth.py  kis_market.py  kis_trading.py
src/auto_invest/core/: monitor.py  trading.py
src/auto_invest/strategy/: __init__.py  closing_screener.py  kr_etf.py  mappings.py  recommender.py  scanner.py  scorer.py  us_market_data.py  us_news.py
src/auto_invest/utils/: cache.py  timeseries.py
src/auto_invest/web/: app.py
src/auto_invest/web/routers/: hub.py  trade.py
src/auto_invest/web/templates/: _quick_trade.html  dashboard.html  discover.html  discover2.html  hub.html  portfolio.html
tests/: test_kis_auth.py  test_recommender.py  test_scorer.py
